added axios to project for giphy api when game is lost or won.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"webpack-dev-server": "^3.8.0"
 	},
 	"dependencies": {
+		"axios": "^0.19.2",
 		"bootstrap": "^4.4.1",
 		"popper.js": "^1.16.1"
 	}
